# fastmcp_ft_crewai

./: .gitignore  requirements.txt
dice_roller/: README.md  pyproject.toml  report.md
dice_roller/src/dice_roller/: crew.py  main.py
dice_roller/src/dice_roller/config/: agents.yaml  tasks.yaml
