[project]
name = "dice_roller"
version = "0.1.0"
description = "dice_roller using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0"
]

[project.scripts]
dice_roller = "dice_roller.main:run"
run_crew = "dice_roller.main:run"
train = "dice_roller.main:train"
replay = "dice_roller.main:replay"
test = "dice_roller.main:test"
run_with_trigger = "dice_roller.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
